--- a/package.json
+++ b/package.json
@@ -7,5 +7,10 @@
     "server": "nodemon server.js"
   },
   "author": "Julia Akimova",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "express": "^4.16.4",
+    "mongoose": "^5.4.10"
+  }
 }
