--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "HBO tv shows library",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "server": "nodemon server.js"
   },
   "author": "Julia Akimova",
@@ -12,5 +13,8 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "mongoose": "^5.4.10"
+  },
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
