--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.10",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "object-to-xml": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.18.9"
